--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
@@ -13,7 +12,6 @@ jobs:
           cache: yarn
           node-version: 20
       - run: yarn install --frozen-lockfile
-
       - run: npm run type
       - run: npm run lint
       - run: npm run test --ci
@@ -24,11 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: update action.yml to use image from local Dockerfile
-        run: |
-          sed -i "s/image: .*/image: Dockerfile/" action.yml
-
+        run: sed -i "s/image: .*/image: Dockerfile/" action.yml
       - name: generate-snake-game-from-github-contribution-grid
         id: generate-snake
         uses: ./
@@ -38,14 +33,12 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
             dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
       - name: ensure the generated file exists
         run: |
           ls dist
           test -f dist/github-contribution-grid-snake.svg
           test -f dist/github-contribution-grid-snake-dark.svg
           test -f dist/github-contribution-grid-snake.gif
-
       - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
@@ -62,13 +55,11 @@ jobs:
           cache: yarn
           node-version: 20
       - run: yarn install --frozen-lockfile
-
       - name: build svg-only action
         run: |
           npm run build:action
           rm -r svg-only/dist
           mv packages/action/dist svg-only/dist
-
       - name: generate-snake-game-from-github-contribution-grid
         id: generate-snake
         uses: ./svg-only
@@ -77,13 +68,11 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-
       - name: ensure the generated file exists
         run: |
           ls dist
           test -f dist/github-contribution-grid-snake.svg
           test -f dist/github-contribution-grid-snake-dark.svg
-
       - uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output-svg-only
@@ -100,15 +89,11 @@ jobs:
           cache: yarn
           node-version: 20
       - run: yarn install --frozen-lockfile
-
       - run: npm run build:demo
-        env:
-          GITHUB_USER_CONTRIBUTION_API_ENDPOINT: https://snk-one.vercel.app/api/github-user-contribution/
-
       - uses: crazy-max/ghaction-github-pages@v3.1.0
         if: success() && github.ref == 'refs/heads/main'
         with:
           target_branch: gh-pages
           build_dir: packages/demo/dist
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN_GH_PAGES }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
